# code-pilot-cli

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
code_pilot_cli/: __init__.py  __main__.py  app.py
code_pilot_cli/commands/: __init__.py  ai.py  chat.py  completions.py  document.py  enhance.py  review.py  scan.py  test.py
